--- a/jassen/project/blog/static/css/style.css
+++ b/jassen/project/blog/static/css/style.css
@@ -1,7 +1,7 @@
 .card{
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 600px;
+    max-width: 900px;
     margin:auto;
     transition: 0.3s;
     border-radius: 10px;
@@ -11,7 +11,7 @@
 }
 .p{
     font-family: "Times New Roman", Times, serif;
-    font-size: 13.5px;
+    font-size: 16.5px;
 }
 .title{
     letter-spacing: 3px;
@@ -29,7 +29,8 @@
     color: #1C9487;
     text-decoration: none;
     background-color: transparent;
-    margin: 234px;
+    float: center;
+    margin: 380px;
 }
 .tags{
     display: inline-block;
@@ -43,6 +44,6 @@
     border-radius: 0;
 }
 img{
-    width: 570px;
+    width: 870px;
     height: auto;
 }
