--- a/jassen/project/blog/templates/Post_list.html
+++ b/jassen/project/blog/templates/Post_list.html
@@ -16,8 +16,31 @@
       <img src="{{obj.banner_photo.url}}">
       <p class="p">{{obj.body}}</p>
       <small>Date Modified: {{obj.date_modified }} </small>
-      <small>{{obj.tags}}</small>
-    </div>
-  {% endfor %}
- {% endblock %}
+      <div class="tags">
+      {% for tag in obj.tags.all %}
+          {% if not forloop.last %}
+              <small>{{tag}},</small>
+          {% else  %}
+              <small>{{tag}}</small>
+          {% endif %}
+      {% endfor %}
+      </div>
+        <div class="pagination">
+          <span class="step-links">
+            {% if post.has_previous %}
+              <a href="?page=1"> &laquo; first</a>
+              <a href="?page={{ post.previous_page_number }}">previous</a>
+            {% endif %}
+            <span class="current">
+              Page {{ post.number }} of {{ post.paginator.num_pages }}.
+            </span>
+            {% if post.has_next %}
+              <a href="?page={{ post.next_page_number }}">next</a><span></span>
+              <p class="page"> <a href="?page={{ post.paginator.num_pages }}"> last &raquo;</a></p>
+            {% endif %}
+          </span>
+        </div>
+      </div>
+    {% endfor %}
+  {% endblock %}
 </html> 
