--- a/jassen/project/blog/templates/index.html
+++ b/jassen/project/blog/templates/index.html
@@ -22,7 +22,7 @@
       {% endfor %}
       </div> 
       <p>{{obj.category.title}}</p>
-      <p><li><a href='{% url "blog:post" obj.id %}'   role="button">Detail</a></li></p>  
+      <p class="li" > <a href='{% url "blog:post" obj.id %}'   role="button" >Detail</a> </p>  
 
   <div class="pagination">
       <span class="step-links">
