--- a/jassen/project/blog/templates/tags.html
+++ b/jassen/project/blog/templates/tags.html
@@ -8,22 +8,25 @@
  {% block content %} 
   {% for obj in post %}
     <div class="card">
-      <h1 class="title">{{obj.blog.heading}}</h1>
-      <small class="sub_heading">{{obj.blog.sub_heading}}</small> 
-      <h3>{{obj.title}}</h3>
-      <p><strong>Posted By:</strong> {{obj.author}}</p>
-      <small> Posted on: {{ obj.date|timesince }} ago</small></p>
-      <img src="{{obj.banner_photo.url}}">
-      <p class="p">{{obj.body}}</p>
-      <small>Date Modified: {{obj.date_modified }} </small>
-      <div class="tags">
-      {% for tag in obj.tags.all %}
+       <h1 class="title">{{obj.blog.heading}}</h1>
+        <small class="sub_heading">{{obj.blog.sub_heading}}</small> 
+        <h3>{{obj.title}}</h3>
+        <p><strong>Posted By:</strong> {{obj.author}}</p>
+        <small> Posted on: {{ obj.date|timesince }} ago</small></p>
+        <img src="{{obj.banner_photo.url}}">
+        <p class="p">{{obj.body}}</p>
+        <small>Date Modified: {{obj.date_modified }} </small>
+        <div class="tags">
+       {% for tag in obj.tags.all %}
           {% if not forloop.last %}
               <a href='{% url "blog:tags" tag.id %}'   role="button" > <small>{{tag}},</small></a>
           {% else  %}
               <a href='{% url "blog:tags" tag.id %}'   role="button" > <small>{{tag}}</small></a>
           {% endif %}
       {% endfor %}
+     </div> 
+    </div> 
     {% endfor %}
+
   {% endblock %}
 </html> 
