--- a/jassen/project/blog/templates/comment.html
+++ b/jassen/project/blog/templates/comment.html
@@ -1,5 +1,5 @@
 	<form method="post" >
 		{% csrf_token %}
 		{{ form.as_p}}
-		<input type="submit" value="submit"><span></span>	  <h2><a href=""><a></h2>
+		<input type="submit" value="submit"><span></span>	  
 	</form>
